--- a/demo-angular/app/home/home.component.html
+++ b/demo-angular/app/home/home.component.html
@@ -1,4 +1,4 @@
 <StackLayout style="padding: 50px;">
-    <stripe:CreditCardView/>
+    <stripe:CreditCardView id="cardView"/>
     <Button text="Submit" (tap)="submit()"></Button>
 </StackLayout>
